# discord-mirror-listener

./: .gitignore  README.md  pyproject.toml
listener/: bot.py  config.py  const.py  utils.py
listener/cogs/: listenercog.py
